[package]
name = "pombase-gocam"
description = "Parser for Gene Ontology Consortium GO-CAM JSON files"
repository = "https://github.com/pombase/pombase-gocam"
authors = ["Kim Rutherford <kmr@kmr.nz>"]
version = "0.57.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
readme = "README.md"
keywords = ["gene-ontology", "GO-CAM", "bioinformatics"]
categories = ["science::bioinformatics"]

[dependencies]
serde_derive = "1.0"
serde_json = "1.0"
serde = "1.0"
anyhow = "1.0"
petgraph = { version = "0.7", features = ["serde-1"] }
phf = { version = "0.11.3", features = ["macros"] }
